2005-08-05 09:42 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (addTriangle) add triangle to ring.

2005-08-05 09:22 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (addSegment) add segment to ring.

2005-08-05 09:04 Mike Park  <mike.park@nasa.gov>

	* src/Makefile (local,clean) removed dup Plan, added Ring
	* src/Makefile.am added Ring to libs and tests

2005-08-05 09:00 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringCreate,ringFree) created new object to keep
	track of a continuous loop of linear segements on a geometry face
	that is meshed by filling with triangles.
	* src/ring.c (ringSegments,ringTriangles) return total counts.

2005-08-04 16:05 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridReconstructSplitEdgeRatio) refactored to
	test face0 and face1 subfaces independently.

2005-08-04 14:20 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridReconstructSplitEdgeRatio) return EMPTY
	without calls to gridRemoveCellsOutsideOfFaces if new surface
	faces do not exist in volume grid (to aid debugging).

2005-08-04 12:47 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridThreadCurveThroughVolume) logic bug that
	prevented an attempt at splitting a face.
	* src/gridinsert.c (gridSplitCellAt) Fixed bug that put subdivided
	cell0 in twice instead of cell0 and cell1.

2005-08-03 16:20 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitFaceAt,gridSplitCellAt) added
	gridSetAuxToAverageOfNodes3,gridSetAuxToAverageOfNodes4,
	gridSetMapMatrixToAverageOfNodes3,gridSetMapMatrixToAverageOfNodes4
	calls to have reasonable map value durring adaptation.

2005-08-03 16:06 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridSetAuxToAverageOfNodes2,gridSetAuxToAverageOfNodes3,
	gridSetAuxToAverageOfNodes4) created from gridSetAuxToAverageOfNodes
	* src/gridmetric.c (gridSetMapMatrixToAverageOfNodes2,
	gridSetMapMatrixToAverageOfNodes3,gridSetMapMatrixToAverageOfNodes4)
	created from gridSetMapMatrixToAverageOfNodes
