@@ -1,3 +1,8 @@
+2005-08-05 10:15 Mike Park  <mike.park@nasa.gov>
+
+	* src/ring.c (addTriangle) abort traingle add if base segment does
+	not exist
+
 2005-08-05 09:42 Mike Park  <mike.park@nasa.gov>
 
 	* src/ring.c (addTriangle) add triangle to ring.
